third_party/move/move-compiler/tests/move_check/typing/bind_duplicate_binding.exp
warning[W09002]: unused variable
  ┌─ tests/move_check/typing/bind_duplicate_binding.move:5:14
  │
5 │         let (x, x) = (0, 0);
  │              ^ Unused local variable 'x'. Consider removing or prefixing with an underscore: '_x'

warning[W09003]: unused assignment
  ┌─ tests/move_check/typing/bind_duplicate_binding.move:5:14
  │
5 │         let (x, x) = (0, 0);
  │              ^ Unused assignment or binding for local 'x'. Consider removing, replacing with '_', or prefixing with '_' (e.g., '_x')

error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/typing/bind_duplicate_binding.move:5:17
  │
5 │         let (x, x) = (0, 0);
  │              -  ^ Duplicate declaration for local 'x' in a given 'let'
  │              │   
  │              Previously declared here

warning[W09003]: unused assignment
  ┌─ tests/move_check/typing/bind_duplicate_binding.move:5:17
  │
5 │         let (x, x) = (0, 0);
  │                 ^ Unused assignment or binding for local 'x'. Consider removing, replacing with '_', or prefixing with '_' (e.g., '_x')

warning[W09002]: unused variable
  ┌─ tests/move_check/typing/bind_duplicate_binding.move:6:14
  │
6 │         let (f, R{f}, f) = (0, R { f: 0 }, 0);
  │              ^ Unused local variable 'f'. Consider removing or prefixing with an underscore: '_f'

warning[W09003]: unused assignment
  ┌─ tests/move_check/typing/bind_duplicate_binding.move:6:14
  │
6 │         let (f, R{f}, f) = (0, R { f: 0 }, 0);
  │              ^ Unused assignment or binding for local 'f'. Consider removing, replacing with '_', or prefixing with '_' (e.g., '_f')

error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/typing/bind_duplicate_binding.move:6:19
  │
6 │         let (f, R{f}, f) = (0, R { f: 0 }, 0);
  │              -    ^ Duplicate declaration for local 'f' in a given 'let'
  │              │     
  │              Previously declared here

warning[W09002]: unused variable
  ┌─ tests/move_check/typing/bind_duplicate_binding.move:6:19
  │
6 │         let (f, R{f}, f) = (0, R { f: 0 }, 0);
  │                   ^ Unused local variable 'f'. Consider removing or prefixing with an underscore: '_f'

warning[W09003]: unused assignment
  ┌─ tests/move_check/typing/bind_duplicate_binding.move:6:19
  │
6 │         let (f, R{f}, f) = (0, R { f: 0 }, 0);
  │                   ^ Unused assignment or binding for local 'f'. Consider removing, replacing with '_', or prefixing with '_' (e.g., '_f')

error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/typing/bind_duplicate_binding.move:6:23
  │
6 │         let (f, R{f}, f) = (0, R { f: 0 }, 0);
  │              -        ^ Duplicate declaration for local 'f' in a given 'let'
  │              │         
  │              Previously declared here

warning[W09003]: unused assignment
  ┌─ tests/move_check/typing/bind_duplicate_binding.move:6:23
  │
6 │         let (f, R{f}, f) = (0, R { f: 0 }, 0);
  │                       ^ Unused assignment or binding for local 'f'. Consider removing, replacing with '_', or prefixing with '_' (e.g., '_f')

